--- a/public/github.ejs
+++ b/public/github.ejs
@@ -5,115 +5,133 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitHub Insight Tool</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-   
-    <div class="container py-5 " >
-        <div class="row border rounded-5 p-3 bg-white shadow box-area" style="width:100%;margin:auto">
+<body style="background-color: #212021;">
+    <button type="" class="btn btn-lg btn-primary fs-6 ab" id="ab" style="background-color: #100d19;border-color:#100d19;margin-left: 15px;margin-top: 20px;margin-bottom: -20px;"><a href="/" class="ab">Search Another Username</a></button>
+    <div class="container py-5" >
+        <div class="row border rounded-5 p-3 bg-white shadow box-area" style="width:100%;margin:auto;border-radius: 15px;border-color: #100d19;">
 
             <!-- Left Box -->
-            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column " style="background: #212021;">
+            <div class="col-md-3 rounded-4 d-flex justify-content-center align-items-center flex-column"
+                style="background: black; border-radius: 15px;border-color: #212021;border-width: 2px;">
                 <div class="featured-image mb-3">
-                    <img src="./assets/images/github.png" class="img-fluid" style="width: 250px; margin-top: 15px;margin-bottom: 15px;">
+                    <img  class="img-fluid" style="width: 250px;  margin-top: 30px;margin-bottom: 15px;" src=<%=results.owner.profile%>>
                 </div>
-    
-            </div> 
-    
+            </div>
+
             <!-- Right Box -->
-            <div class="col-md-6 right-box" >
-                <div class="row align-items-center text-center" style="height: 40vh;min-height: none;" >
-            
+            <div class="col-md-9 right-box"  >
+                <div class="row align-items-center " style="margin:auto;">
+
                     <!-- Search Repositories Section -->
                     <div>
-                        <div class="col-12 mb-2">
-                            <p class="fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: 1;">Search Repositories<br>By Username</p>
+                        <div class="col-12 mb-2 text-center">
+                            <p class="fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 400; color: #212021;line-height: 1;margin-top: 18px;">Searched Repositories</p>
                         </div>
-                
-                        <div class="col-12 mb-4">
-                          
-                            <form class="input-group" method="post" action="/">
-                                <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Input Username" name="username">
-                                <input type="submit" class="btn btn-lg btn-primary fs-6" style="background-color: #212021;" value="Search">
-                            </form>
+
+                        <div class="col-12 mb-4 text-left" >
+                            <h3 style="font-family: 'Courier New', Courier, monospace; font-weight: 800; color: #212021;line-height: 1.5;"><%= results.owner.username %></h3>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">Name: <%= results.owner.name %></p>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">email: <%= results.owner.email || 'Not specified' %></p>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">Location: <%= results.owner.location || 'Not specified' %></p>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">Company: <%= results.owner.company || 'Not specified' %></p>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">Twitter: <%= results.owner.twitter || 'Not specified' %></p>
+                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: .7;">Profile: <a target="_blank" href="<%= results.owner.url %>">Click </a></p>
                         </div>
-    
-                        <div  class="col-12 mb-2">
-                            <p style="font-family: 'Courier New', Courier, monospace; font-weight: 400; color: #212021;line-height: 1.5;">Effortlessly explore code<br>with our GitHub Insight tool</p>
-                        </div>
-                
+
+                       
+
                     </div>
-                    
+
                 </div>
             </div>
-            
-    
+
         </div>
-        <div class="container d-flex justify-content-center align-items-center ">
-            <h1 class="col-6 mb-6">Repository Listed </h1>
-            <div class="limit-input col-6 mb-2">
-                <form class="input-group" method="get" action="/result">
-                    <input type="number" class="form-control form-control-lg bg-light fs-6" id="limit" name="limit" value="<%= results.next ? results.next.limit : '' %>" min="1">
-                    <input type="submit" class="btn btn-lg btn-primary fs-6" style="background-color: #212021;" value="Submit">
-                </form>
-            </div>
+        <div class=" border rounded-5 p-3 shadow box-area" style="width:100%;margin:auto;background-color:#100d19;margin-top:50px;border-radius: 15px;margin-bottom: 40px;">
+        <div class="container d-flex justify-content-center align-items-center bg-white rounded-5 p-3" style="border-radius: 15px;margin-top:30px">
+            <h1 class="col-8 mb-1">Repositories listed below </h1>
+            <form class="input-group" method="get" action="/result">
+                <input type="text" class="form-control form-control-lg bg-light fs-6"  id="search" value="Search Repos" >
+                <button type="submit" class="btn btn-lg btn-primary fs-6" style="background-color: #212021;border-color:#100d19;margin-right: 5px;""><img src='./assets/images/mg.png' alt='Search' style='width: 15px; height: 15px;'></button>
+                
+            </form>
         </div>
-      
-        
-        
+
         <div class="row row-cols-1 row-cols-md-2 g-4 py-5">
             <% results.paginatedData.forEach(entry => { %>
-                <div class="col">
-                    <div class="card">
+            <a href=<%=entry.url%>>
+                <div class="col" >
+                    <div class="card" style="border-radius: 15px;">
                         <div class="card-body">
                             <h3 class="card-title"><%= entry.name %></h3>
                             <% if (entry.description !== null) { %>
-                                <p class="card-text description"><%= entry.description %></p>
+                            <p class="card-text description"><%= entry.description %></p>
                             <% } else { %>
-                                <p class="card-text description">No description</p>
+                            <p class="card-text description">No description</p>
                             <% } %>
                         </div>
                         <div class="mb-5 d-flex " style="flex-direction: row; margin:10px">
                             <% if (entry.language && entry.language.length > 0) { %>
-                                <% entry.language.slice(0, 4).forEach((lang, index, array) => { %>
-                                    <div class="language-box">
-                                        <% if (index === 3) { %>
-                                            <tag class="btn btn-primary" style="cursor: mouse; margin-left:10px"><%= lang %>+ </tag>
-                                        <% } else { %>
-                                            <tag class="btn btn-primary" style="cursor: mouse; margin-left:10px"><%= lang %></tag>
-                                        <% } %>
-                                    </div>
-                                <% }); %>
+                            <% entry.language.slice(0, 4).forEach((lang, index, array) => { %>
+                            <div class="language-box">
+                                <% if (index === 3) { %>
+                                <span class="btn btn-primary"  style="cursor: mouse; margin-left:10px;background-color: #212021;border-color:#100d19"><%= lang %>+</span>
+                                <% } else { %>
+                                <span class="btn btn-primary" style="cursor: mouse; margin-left:10px;background-color: #212021;border-color:#100d19"><%= lang %></span>
+                                <% } %>
+                            </div>
+                            <% }); %>
                             <% } else { %>
-                                <button class="btn btn-primary" style="cursor: mouse; margin-left:10px">No language used</button>
+                            <span class="btn btn-primary" style="cursor: mouse; margin-left:10px;background-color: #212021;border-color:#100d19 ;">No language used</span>
                             <% } %>
                         </div>
                     </div>
                 </div>
+            </a>
             <% }); %>
         </div>
 
-        <div class="pagination">
-            <% if (results.previous) { %>
-                <a href="/result?page=<%= results.previous.page %>&limit=<%= results.previous.limit %>">Previous</a>
-            <% } %>
-
-            <% const minPages = 10; %>
-            <% const startPage = Math.max(1, results.currentPage - Math.floor(minPages / 2)); %>
-            <% const endPage = Math.min(startPage + minPages - 1, results.totalPages); %>
-
-            <% for (let i = startPage; i <= endPage; i++) { %>
-                <a href="/result?page=<%= i %>&limit=<%= results.next ? results.next.limit : '' %>" <% if (i === results.currentPage) { %>class="active"<% } %>><%= i %></a>
-            <% } %>
-
-            <% if (results.next) { %>
-                <a href="/result?page=<%= results.next.page %>&limit=<%= results.next.limit %>">Next</a>
-            <% } %>
+        
+        <div class="pagination row container">
+            <div class="col-md-8 " style="min-width: 50%;">
+                <% if (results.previous) { %>
+                    <a href="/result?page=<%= results.previous %>&limit=<%= results.limit %>">Previous</a>
+                <% } %>
+        
+                <% const minPages = 10; %>
+                <% const startPage = Math.max(1, results.currentPage - Math.floor(minPages / 2)); %>
+                <% const endPage = Math.min(startPage + minPages - 1, results.totalPages); %>
+                <% const offset = Math.max(0, minPages - (results.totalPages - results.currentPage)); %>
+                <% const adjustedStartPage = Math.max(1, startPage - offset); %>
+        
+                <% for (let i = adjustedStartPage; i <= endPage; i++) { %>
+                    <a href="/result?page=<%= i %>&limit=<%= results.limit %>" <% if (i === results.currentPage) { %>class="active"<% } %>><%= i %></a>
+                <% } %>
+        
+                <% if (results.next) { %>
+                    <a href="/result?page=<%= results.next %>&limit=<%= results.limit %>">Next</a>
+                <% } %>
+            </div>
+            <div class="col-md-4 rounded-4 d-flex justify-content-end align-items-center flex-column" style=" margin-bottom: 10px;">
+                <form class="input-group" method="get" action="/result" style="height: 50px; display: flex; align-items: center; justify-content: flex-end; margin-left: auto;">
+                    <input type="text" class="form-control-lg bg-light fs-6" style="width: 54px; height: 87%;" id="limit" name="limit" value="<%=results.limit%>" min="1">
+                    <button type="submit" class="btn btn-lg btn-primary fs-6" style="background-color: #212021; border-color: #100d19; margin-right: 5px;">
+                        <img src='./assets/images/mg.png' alt='Search' style='width: 15px; height: 15px;'>
+                    </button>
+                </form>
+            </div>
+            
+            
+            
+            
         </div>
+        
+    
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
