--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,58 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+  
     <title>FindRepo</title>
 </head>
+
 <body style="background-color: #100d19">
-
     <!-- Main Container -->
-    <div class="container d-flex justify-content-center align-items-center min-vh-100" >
+  
+    <div id="loadingOverlay" style="display:none;background: #000 url(./assets/images/spinner.gif) no-repeat center center;background-size: 30%;height: 100%;width: 100%;position: fixed;z-index: 100;"></div>
 
+   
+    
+      
+    <section id="uploadForm" class="container d-flex justify-content-center align-items-center min-vh-100">
         <!-- Login Container -->
         <div class="row border rounded-5 p-3 bg-white shadow box-area" style="width:90%;margin:20px">
-
             <!-- Left Box -->
             <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #212021;">
                 <div class="featured-image mb-3">
                     <img src="./assets/images/github.png" class="img-fluid" style="width: 250px; margin-top: 15px;margin-bottom: 15px;">
                 </div>
-
             </div> 
-
             <!-- Right Box -->
-            <div class="col-md-6 right-box" >
-                <div class="row align-items-center text-center" style="height: 80vh;min-height: none;" >
-            
+            <div class="col-md-6 right-box">
+                <div class="row align-items-center text-center" style="height: 80vh;min-height: none;">
                     <!-- Search Repositories Section -->
                     <div>
                         <div class="col-12 mb-2">
                             <p class="fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600; color: #212021;line-height: 1;">Search Repositories<br>By Username</p>
                         </div>
-                
                         <div class="col-12 mb-4">
                             <% if(message.length>0) {%>
                                 <div class="alert alert-danger">
-                                  <%=message%>
+                                    <%=message%>
                                 </div>
-                                <%}%>
-                            <form class="input-group" method="post" action="/">
+                            <%}%>
+                            <form id="searchForm" class="input-group" method="post" action="/">
                                 <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Input Username" name="username">
                                 <input type="submit" class="btn btn-lg btn-primary fs-6" style="background-color: #212021;" value="Search">
                             </form>
                         </div>
-
                         <div  class="col-12 mb-2">
                             <p style="font-family: 'Courier New', Courier, monospace; font-weight: 400; color: #212021;line-height: 1.5;">Effortlessly explore code<br>with our GitHub Insight tool</p>
                         </div>
-                
                     </div>
-                    
                 </div>
             </div>
-            
-
         </div>
-    </div>
+    </section>
 
+    <!-- Loader Overlay -->
+  
 </body>
+
+<script src="./assets/js/loader.js"></script>
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </html>
